Chapter3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> KOTOBA ID func_start ENDSTMT declare startaux BEGIN func_begin_main block END
Rule 2     start -> KOTOBA ID func_start ENDSTMT startaux BEGIN func_begin_main block END
Rule 3     startaux -> function startaux
Rule 4     startaux -> empty
Rule 5     block -> OPENCURL blockaux CLOSECURL
Rule 6     blockaux -> action blockaux
Rule 7     blockaux -> empty
Rule 8     action -> input
Rule 9     action -> output
Rule 10    action -> statement
Rule 11    input -> READ OPENPAREN ID func_read CLOSEPAREN ENDSTMT
Rule 12    output -> WRITE OPENPAREN outputaux CLOSEPAREN ENDSTMT
Rule 13    outputaux -> expression func_print
Rule 14    outputaux -> expression func_print COMA outputaux
Rule 15    declare -> DEC decaux
Rule 16    decaux -> type ID func_declare_var declareaux
Rule 17    decaux -> type ID OPENBRAC cte CLOSEBRAC func_declare_array declareaux
Rule 18    declareaux -> ENDSTMT
Rule 19    declareaux -> COMA decaux
Rule 20    assign -> ID EQUAL assignaux
Rule 21    assign -> ID OPENBRAC cte CLOSEBRAC EQUAL assignaux
Rule 22    assignaux -> exp ENDSTMT
Rule 23    assignaux -> OPENCURL assiaux CLOSECURL ENDSTMT
Rule 24    assiaux -> exp
Rule 25    assiaux -> exp COMA assiaux
Rule 26    cte -> ID
Rule 27    cte -> BOOLCTE
Rule 28    cte -> NUMBERCTE func_size
Rule 29    cte -> WORDCTE
Rule 30    cte -> SENTENCECTE
Rule 31    type -> BOOL func_type
Rule 32    type -> NUMBER func_type
Rule 33    type -> WORD func_type
Rule 34    type -> SENTENCE func_type
Rule 35    statement -> assign
Rule 36    statement -> expression
Rule 37    statement -> condition
Rule 38    statement -> cycle
Rule 39    statement -> specialfunction
Rule 40    expression -> relopexpression
Rule 41    expression -> relopexpression AND expression
Rule 42    expression -> relopexpression OR expression
Rule 43    relopexpression -> exp
Rule 44    relopexpression -> exp RELOP exp
Rule 45    relopexpression -> NOT exp
Rule 46    exp -> term
Rule 47    exp -> term PLUS exp
Rule 48    exp -> term MINUS exp
Rule 49    term -> factor
Rule 50    term -> factor MULT term
Rule 51    term -> factor DIV term
Rule 52    factor -> OPENPAREN expression CLOSEPAREN
Rule 53    factor -> cte
Rule 54    condition -> IF OPENPAREN expression CLOSEPAREN block
Rule 55    condition -> IF OPENPAREN expression CLOSEPAREN block ELSE block
Rule 56    cycle -> WHILE OPENPAREN expression CLOSEPAREN block
Rule 57    cycle -> DO block WHILE OPENPAREN expression CLOSEPAREN ENDSTMT
Rule 58    function -> FUNC funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL declare blockaux returnaux ENDSTMT CLOSECURL
Rule 59    function -> FUNC funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL blockaux returnaux ENDSTMT CLOSECURL
Rule 60    funcaux -> type
Rule 61    funcaux -> VOID
Rule 62    parameter -> type ID func_declare_var parameteraux
Rule 63    parameter -> type ID OPENBRAC cte CLOSEBRAC func_declare_array parameteraux
Rule 64    parameteraux -> COMA parameter
Rule 65    parameteraux -> empty
Rule 66    returnaux -> RETURN ID
Rule 67    returnaux -> empty
Rule 68    specialfunction -> ID DOT special OPENPAREN spaux CLOSEPAREN ENDSTMT
Rule 69    spaux -> cte
Rule 70    spaux -> empty
Rule 71    special -> LENGTH
Rule 72    special -> FREQUENCY
Rule 73    special -> SEARCH
Rule 74    special -> EXISTS
Rule 75    special -> MEAN
Rule 76    special -> MEDIAN
Rule 77    special -> MODE
Rule 78    special -> WORDCOUNT
Rule 79    special -> TOKENIZE
Rule 80    special -> REMOVE
Rule 81    empty -> <empty>
Rule 82    func_start -> <empty>
Rule 83    func_declare_var -> <empty>
Rule 84    func_declare_array -> <empty>
Rule 85    func_declare_function -> <empty>
Rule 86    func_type -> <empty>
Rule 87    func_size -> <empty>
Rule 88    func_begin_main -> <empty>
Rule 89    func_read -> <empty>
Rule 90    func_print -> <empty>

Terminals, with rules where they appear

AND                  : 41
BEGIN                : 1 2
BOOL                 : 31
BOOLCTE              : 27
CLOSEBRAC            : 17 21 63
CLOSECURL            : 5 23 58 59
CLOSEPAREN           : 11 12 52 54 55 56 57 58 59 68
COMA                 : 14 19 25 64
DEC                  : 15
DIV                  : 51
DO                   : 57
DOT                  : 68
ELSE                 : 55
END                  : 1 2
ENDSTMT              : 1 2 11 12 18 22 23 57 58 59 68
EQUAL                : 20 21
EXISTS               : 74
FREQUENCY            : 72
FUNC                 : 58 59
ID                   : 1 2 11 16 17 20 21 26 58 59 62 63 66 68
IF                   : 54 55
KOTOBA               : 1 2
LENGTH               : 71
MEAN                 : 75
MEDIAN               : 76
MINUS                : 48
MODE                 : 77
MULT                 : 50
NOT                  : 45
NUMBER               : 32
NUMBERCTE            : 28
OPENBRAC             : 17 21 63
OPENCURL             : 5 23 58 59
OPENPAREN            : 11 12 52 54 55 56 57 58 59 68
OR                   : 42
PLUS                 : 47
READ                 : 11
RELOP                : 44
REMOVE               : 80
RETURN               : 66
SEARCH               : 73
SENTENCE             : 34
SENTENCECTE          : 30
TOKENIZE             : 79
VOID                 : 61
WHILE                : 56 57
WORD                 : 33
WORDCOUNT            : 78
WORDCTE              : 29
WRITE                : 12
error                : 

Nonterminals, with rules where they appear

action               : 6
assiaux              : 23 25
assign               : 35
assignaux            : 20 21
block                : 1 2 54 55 55 56 57
blockaux             : 5 6 58 59
condition            : 37
cte                  : 17 21 53 63 69
cycle                : 38
decaux               : 15 19
declare              : 1 58
declareaux           : 16 17
empty                : 4 7 65 67 70
exp                  : 22 24 25 43 44 44 45 47 48
expression           : 13 14 36 41 42 52 54 55 56 57
factor               : 49 50 51
func_begin_main      : 1 2
func_declare_array   : 17 63
func_declare_function : 58 59
func_declare_var     : 16 62
func_print           : 13 14
func_read            : 11
func_size            : 28
func_start           : 1 2
func_type            : 31 32 33 34
funcaux              : 58 59
function             : 3
input                : 8
output               : 9
outputaux            : 12 14
parameter            : 58 59 64
parameteraux         : 62 63
relopexpression      : 40 41 42
returnaux            : 58 59
spaux                : 68
special              : 68
specialfunction      : 39
start                : 0
startaux             : 1 2 3
statement            : 10
term                 : 46 47 48 50 51
type                 : 16 17 60 62 63

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . KOTOBA ID func_start ENDSTMT declare startaux BEGIN func_begin_main block END
    (2) start -> . KOTOBA ID func_start ENDSTMT startaux BEGIN func_begin_main block END

    KOTOBA          shift and go to state 1

    start                          shift and go to state 2

state 1

    (1) start -> KOTOBA . ID func_start ENDSTMT declare startaux BEGIN func_begin_main block END
    (2) start -> KOTOBA . ID func_start ENDSTMT startaux BEGIN func_begin_main block END

    ID              shift and go to state 3


state 2

    (0) S' -> start .



state 3

    (1) start -> KOTOBA ID . func_start ENDSTMT declare startaux BEGIN func_begin_main block END
    (2) start -> KOTOBA ID . func_start ENDSTMT startaux BEGIN func_begin_main block END
    (82) func_start -> .

    ENDSTMT         reduce using rule 82 (func_start -> .)

    func_start                     shift and go to state 4

state 4

    (1) start -> KOTOBA ID func_start . ENDSTMT declare startaux BEGIN func_begin_main block END
    (2) start -> KOTOBA ID func_start . ENDSTMT startaux BEGIN func_begin_main block END

    ENDSTMT         shift and go to state 5


state 5

    (1) start -> KOTOBA ID func_start ENDSTMT . declare startaux BEGIN func_begin_main block END
    (2) start -> KOTOBA ID func_start ENDSTMT . startaux BEGIN func_begin_main block END
    (15) declare -> . DEC decaux
    (3) startaux -> . function startaux
    (4) startaux -> . empty
    (58) function -> . FUNC funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL declare blockaux returnaux ENDSTMT CLOSECURL
    (59) function -> . FUNC funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL blockaux returnaux ENDSTMT CLOSECURL
    (81) empty -> .

    DEC             shift and go to state 6
    FUNC            shift and go to state 10
    BEGIN           reduce using rule 81 (empty -> .)

    function                       shift and go to state 9
    empty                          shift and go to state 8
    startaux                       shift and go to state 7
    declare                        shift and go to state 11

state 6

    (15) declare -> DEC . decaux
    (16) decaux -> . type ID func_declare_var declareaux
    (17) decaux -> . type ID OPENBRAC cte CLOSEBRAC func_declare_array declareaux
    (31) type -> . BOOL func_type
    (32) type -> . NUMBER func_type
    (33) type -> . WORD func_type
    (34) type -> . SENTENCE func_type

    BOOL            shift and go to state 14
    NUMBER          shift and go to state 13
    WORD            shift and go to state 16
    SENTENCE        shift and go to state 12

    decaux                         shift and go to state 15
    type                           shift and go to state 17

state 7

    (2) start -> KOTOBA ID func_start ENDSTMT startaux . BEGIN func_begin_main block END

    BEGIN           shift and go to state 18


state 8

    (4) startaux -> empty .

    BEGIN           reduce using rule 4 (startaux -> empty .)


state 9

    (3) startaux -> function . startaux
    (3) startaux -> . function startaux
    (4) startaux -> . empty
    (58) function -> . FUNC funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL declare blockaux returnaux ENDSTMT CLOSECURL
    (59) function -> . FUNC funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL blockaux returnaux ENDSTMT CLOSECURL
    (81) empty -> .

    FUNC            shift and go to state 10
    BEGIN           reduce using rule 81 (empty -> .)

    function                       shift and go to state 9
    startaux                       shift and go to state 19
    empty                          shift and go to state 8

state 10

    (58) function -> FUNC . funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL declare blockaux returnaux ENDSTMT CLOSECURL
    (59) function -> FUNC . funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL blockaux returnaux ENDSTMT CLOSECURL
    (60) funcaux -> . type
    (61) funcaux -> . VOID
    (31) type -> . BOOL func_type
    (32) type -> . NUMBER func_type
    (33) type -> . WORD func_type
    (34) type -> . SENTENCE func_type

    VOID            shift and go to state 21
    BOOL            shift and go to state 14
    NUMBER          shift and go to state 13
    WORD            shift and go to state 16
    SENTENCE        shift and go to state 12

    type                           shift and go to state 20
    funcaux                        shift and go to state 22

state 11

    (1) start -> KOTOBA ID func_start ENDSTMT declare . startaux BEGIN func_begin_main block END
    (3) startaux -> . function startaux
    (4) startaux -> . empty
    (58) function -> . FUNC funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL declare blockaux returnaux ENDSTMT CLOSECURL
    (59) function -> . FUNC funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL blockaux returnaux ENDSTMT CLOSECURL
    (81) empty -> .

    FUNC            shift and go to state 10
    BEGIN           reduce using rule 81 (empty -> .)

    function                       shift and go to state 9
    empty                          shift and go to state 8
    startaux                       shift and go to state 23

state 12

    (34) type -> SENTENCE . func_type
    (86) func_type -> .

    ID              reduce using rule 86 (func_type -> .)

    func_type                      shift and go to state 24

state 13

    (32) type -> NUMBER . func_type
    (86) func_type -> .

    ID              reduce using rule 86 (func_type -> .)

    func_type                      shift and go to state 25

state 14

    (31) type -> BOOL . func_type
    (86) func_type -> .

    ID              reduce using rule 86 (func_type -> .)

    func_type                      shift and go to state 26

state 15

    (15) declare -> DEC decaux .

    READ            reduce using rule 15 (declare -> DEC decaux .)
    WRITE           reduce using rule 15 (declare -> DEC decaux .)
    ID              reduce using rule 15 (declare -> DEC decaux .)
    IF              reduce using rule 15 (declare -> DEC decaux .)
    WHILE           reduce using rule 15 (declare -> DEC decaux .)
    DO              reduce using rule 15 (declare -> DEC decaux .)
    NOT             reduce using rule 15 (declare -> DEC decaux .)
    OPENPAREN       reduce using rule 15 (declare -> DEC decaux .)
    BOOLCTE         reduce using rule 15 (declare -> DEC decaux .)
    NUMBERCTE       reduce using rule 15 (declare -> DEC decaux .)
    WORDCTE         reduce using rule 15 (declare -> DEC decaux .)
    SENTENCECTE     reduce using rule 15 (declare -> DEC decaux .)
    RETURN          reduce using rule 15 (declare -> DEC decaux .)
    ENDSTMT         reduce using rule 15 (declare -> DEC decaux .)
    FUNC            reduce using rule 15 (declare -> DEC decaux .)
    BEGIN           reduce using rule 15 (declare -> DEC decaux .)


state 16

    (33) type -> WORD . func_type
    (86) func_type -> .

    ID              reduce using rule 86 (func_type -> .)

    func_type                      shift and go to state 27

state 17

    (16) decaux -> type . ID func_declare_var declareaux
    (17) decaux -> type . ID OPENBRAC cte CLOSEBRAC func_declare_array declareaux

    ID              shift and go to state 28


state 18

    (2) start -> KOTOBA ID func_start ENDSTMT startaux BEGIN . func_begin_main block END
    (88) func_begin_main -> .

    OPENCURL        reduce using rule 88 (func_begin_main -> .)

    func_begin_main                shift and go to state 29

state 19

    (3) startaux -> function startaux .

    BEGIN           reduce using rule 3 (startaux -> function startaux .)


state 20

    (60) funcaux -> type .

    ID              reduce using rule 60 (funcaux -> type .)


state 21

    (61) funcaux -> VOID .

    ID              reduce using rule 61 (funcaux -> VOID .)


state 22

    (58) function -> FUNC funcaux . ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL declare blockaux returnaux ENDSTMT CLOSECURL
    (59) function -> FUNC funcaux . ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL blockaux returnaux ENDSTMT CLOSECURL

    ID              shift and go to state 30


state 23

    (1) start -> KOTOBA ID func_start ENDSTMT declare startaux . BEGIN func_begin_main block END

    BEGIN           shift and go to state 31


state 24

    (34) type -> SENTENCE func_type .

    ID              reduce using rule 34 (type -> SENTENCE func_type .)


state 25

    (32) type -> NUMBER func_type .

    ID              reduce using rule 32 (type -> NUMBER func_type .)


state 26

    (31) type -> BOOL func_type .

    ID              reduce using rule 31 (type -> BOOL func_type .)


state 27

    (33) type -> WORD func_type .

    ID              reduce using rule 33 (type -> WORD func_type .)


state 28

    (16) decaux -> type ID . func_declare_var declareaux
    (17) decaux -> type ID . OPENBRAC cte CLOSEBRAC func_declare_array declareaux
    (83) func_declare_var -> .

    OPENBRAC        shift and go to state 32
    ENDSTMT         reduce using rule 83 (func_declare_var -> .)
    COMA            reduce using rule 83 (func_declare_var -> .)

    func_declare_var               shift and go to state 33

state 29

    (2) start -> KOTOBA ID func_start ENDSTMT startaux BEGIN func_begin_main . block END
    (5) block -> . OPENCURL blockaux CLOSECURL

    OPENCURL        shift and go to state 34

    block                          shift and go to state 35

state 30

    (58) function -> FUNC funcaux ID . func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL declare blockaux returnaux ENDSTMT CLOSECURL
    (59) function -> FUNC funcaux ID . func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL blockaux returnaux ENDSTMT CLOSECURL
    (85) func_declare_function -> .

    OPENPAREN       reduce using rule 85 (func_declare_function -> .)

    func_declare_function          shift and go to state 36

state 31

    (1) start -> KOTOBA ID func_start ENDSTMT declare startaux BEGIN . func_begin_main block END
    (88) func_begin_main -> .

    OPENCURL        reduce using rule 88 (func_begin_main -> .)

    func_begin_main                shift and go to state 37

state 32

    (17) decaux -> type ID OPENBRAC . cte CLOSEBRAC func_declare_array declareaux
    (26) cte -> . ID
    (27) cte -> . BOOLCTE
    (28) cte -> . NUMBERCTE func_size
    (29) cte -> . WORDCTE
    (30) cte -> . SENTENCECTE

    ID              shift and go to state 40
    BOOLCTE         shift and go to state 39
    NUMBERCTE       shift and go to state 38
    WORDCTE         shift and go to state 43
    SENTENCECTE     shift and go to state 42

    cte                            shift and go to state 41

state 33

    (16) decaux -> type ID func_declare_var . declareaux
    (18) declareaux -> . ENDSTMT
    (19) declareaux -> . COMA decaux

    ENDSTMT         shift and go to state 44
    COMA            shift and go to state 45

    declareaux                     shift and go to state 46

state 34

    (5) block -> OPENCURL . blockaux CLOSECURL
    (6) blockaux -> . action blockaux
    (7) blockaux -> . empty
    (8) action -> . input
    (9) action -> . output
    (10) action -> . statement
    (81) empty -> .
    (11) input -> . READ OPENPAREN ID func_read CLOSEPAREN ENDSTMT
    (12) output -> . WRITE OPENPAREN outputaux CLOSEPAREN ENDSTMT
    (35) statement -> . assign
    (36) statement -> . expression
    (37) statement -> . condition
    (38) statement -> . cycle
    (39) statement -> . specialfunction
    (20) assign -> . ID EQUAL assignaux
    (21) assign -> . ID OPENBRAC cte CLOSEBRAC EQUAL assignaux
    (40) expression -> . relopexpression
    (41) expression -> . relopexpression AND expression
    (42) expression -> . relopexpression OR expression
    (54) condition -> . IF OPENPAREN expression CLOSEPAREN block
    (55) condition -> . IF OPENPAREN expression CLOSEPAREN block ELSE block
    (56) cycle -> . WHILE OPENPAREN expression CLOSEPAREN block
    (57) cycle -> . DO block WHILE OPENPAREN expression CLOSEPAREN ENDSTMT
    (68) specialfunction -> . ID DOT special OPENPAREN spaux CLOSEPAREN ENDSTMT
    (43) relopexpression -> . exp
    (44) relopexpression -> . exp RELOP exp
    (45) relopexpression -> . NOT exp
    (46) exp -> . term
    (47) exp -> . term PLUS exp
    (48) exp -> . term MINUS exp
    (49) term -> . factor
    (50) term -> . factor MULT term
    (51) term -> . factor DIV term
    (52) factor -> . OPENPAREN expression CLOSEPAREN
    (53) factor -> . cte
    (26) cte -> . ID
    (27) cte -> . BOOLCTE
    (28) cte -> . NUMBERCTE func_size
    (29) cte -> . WORDCTE
    (30) cte -> . SENTENCECTE

    CLOSECURL       reduce using rule 81 (empty -> .)
    READ            shift and go to state 48
    WRITE           shift and go to state 56
    ID              shift and go to state 59
    IF              shift and go to state 53
    WHILE           shift and go to state 64
    DO              shift and go to state 47
    NOT             shift and go to state 57
    OPENPAREN       shift and go to state 49
    BOOLCTE         shift and go to state 39
    NUMBERCTE       shift and go to state 38
    WORDCTE         shift and go to state 43
    SENTENCECTE     shift and go to state 42

    statement                      shift and go to state 50
    factor                         shift and go to state 51
    input                          shift and go to state 52
    blockaux                       shift and go to state 55
    relopexpression                shift and go to state 58
    condition                      shift and go to state 60
    cycle                          shift and go to state 61
    term                           shift and go to state 62
    specialfunction                shift and go to state 63
    cte                            shift and go to state 65
    empty                          shift and go to state 54
    exp                            shift and go to state 66
    action                         shift and go to state 67
    output                         shift and go to state 68
    expression                     shift and go to state 69
    assign                         shift and go to state 70

state 35

    (2) start -> KOTOBA ID func_start ENDSTMT startaux BEGIN func_begin_main block . END

    END             shift and go to state 71


state 36

    (58) function -> FUNC funcaux ID func_declare_function . OPENPAREN parameter CLOSEPAREN OPENCURL declare blockaux returnaux ENDSTMT CLOSECURL
    (59) function -> FUNC funcaux ID func_declare_function . OPENPAREN parameter CLOSEPAREN OPENCURL blockaux returnaux ENDSTMT CLOSECURL

    OPENPAREN       shift and go to state 72


state 37

    (1) start -> KOTOBA ID func_start ENDSTMT declare startaux BEGIN func_begin_main . block END
    (5) block -> . OPENCURL blockaux CLOSECURL

    OPENCURL        shift and go to state 34

    block                          shift and go to state 73

state 38

    (28) cte -> NUMBERCTE . func_size
    (87) func_size -> .

    CLOSEBRAC       reduce using rule 87 (func_size -> .)
    MULT            reduce using rule 87 (func_size -> .)
    DIV             reduce using rule 87 (func_size -> .)
    PLUS            reduce using rule 87 (func_size -> .)
    MINUS           reduce using rule 87 (func_size -> .)
    RELOP           reduce using rule 87 (func_size -> .)
    AND             reduce using rule 87 (func_size -> .)
    OR              reduce using rule 87 (func_size -> .)
    READ            reduce using rule 87 (func_size -> .)
    WRITE           reduce using rule 87 (func_size -> .)
    ID              reduce using rule 87 (func_size -> .)
    IF              reduce using rule 87 (func_size -> .)
    WHILE           reduce using rule 87 (func_size -> .)
    DO              reduce using rule 87 (func_size -> .)
    NOT             reduce using rule 87 (func_size -> .)
    OPENPAREN       reduce using rule 87 (func_size -> .)
    BOOLCTE         reduce using rule 87 (func_size -> .)
    NUMBERCTE       reduce using rule 87 (func_size -> .)
    WORDCTE         reduce using rule 87 (func_size -> .)
    SENTENCECTE     reduce using rule 87 (func_size -> .)
    CLOSECURL       reduce using rule 87 (func_size -> .)
    CLOSEPAREN      reduce using rule 87 (func_size -> .)
    RETURN          reduce using rule 87 (func_size -> .)
    ENDSTMT         reduce using rule 87 (func_size -> .)
    COMA            reduce using rule 87 (func_size -> .)

    func_size                      shift and go to state 74

state 39

    (27) cte -> BOOLCTE .

    MULT            reduce using rule 27 (cte -> BOOLCTE .)
    DIV             reduce using rule 27 (cte -> BOOLCTE .)
    PLUS            reduce using rule 27 (cte -> BOOLCTE .)
    MINUS           reduce using rule 27 (cte -> BOOLCTE .)
    COMA            reduce using rule 27 (cte -> BOOLCTE .)
    CLOSECURL       reduce using rule 27 (cte -> BOOLCTE .)
    RELOP           reduce using rule 27 (cte -> BOOLCTE .)
    AND             reduce using rule 27 (cte -> BOOLCTE .)
    OR              reduce using rule 27 (cte -> BOOLCTE .)
    READ            reduce using rule 27 (cte -> BOOLCTE .)
    WRITE           reduce using rule 27 (cte -> BOOLCTE .)
    ID              reduce using rule 27 (cte -> BOOLCTE .)
    IF              reduce using rule 27 (cte -> BOOLCTE .)
    WHILE           reduce using rule 27 (cte -> BOOLCTE .)
    DO              reduce using rule 27 (cte -> BOOLCTE .)
    NOT             reduce using rule 27 (cte -> BOOLCTE .)
    OPENPAREN       reduce using rule 27 (cte -> BOOLCTE .)
    BOOLCTE         reduce using rule 27 (cte -> BOOLCTE .)
    NUMBERCTE       reduce using rule 27 (cte -> BOOLCTE .)
    WORDCTE         reduce using rule 27 (cte -> BOOLCTE .)
    SENTENCECTE     reduce using rule 27 (cte -> BOOLCTE .)
    RETURN          reduce using rule 27 (cte -> BOOLCTE .)
    ENDSTMT         reduce using rule 27 (cte -> BOOLCTE .)
    CLOSEPAREN      reduce using rule 27 (cte -> BOOLCTE .)
    CLOSEBRAC       reduce using rule 27 (cte -> BOOLCTE .)


state 40

    (26) cte -> ID .

    MULT            reduce using rule 26 (cte -> ID .)
    DIV             reduce using rule 26 (cte -> ID .)
    PLUS            reduce using rule 26 (cte -> ID .)
    MINUS           reduce using rule 26 (cte -> ID .)
    COMA            reduce using rule 26 (cte -> ID .)
    CLOSECURL       reduce using rule 26 (cte -> ID .)
    RELOP           reduce using rule 26 (cte -> ID .)
    AND             reduce using rule 26 (cte -> ID .)
    OR              reduce using rule 26 (cte -> ID .)
    CLOSEPAREN      reduce using rule 26 (cte -> ID .)
    READ            reduce using rule 26 (cte -> ID .)
    WRITE           reduce using rule 26 (cte -> ID .)
    ID              reduce using rule 26 (cte -> ID .)
    IF              reduce using rule 26 (cte -> ID .)
    WHILE           reduce using rule 26 (cte -> ID .)
    DO              reduce using rule 26 (cte -> ID .)
    NOT             reduce using rule 26 (cte -> ID .)
    OPENPAREN       reduce using rule 26 (cte -> ID .)
    BOOLCTE         reduce using rule 26 (cte -> ID .)
    NUMBERCTE       reduce using rule 26 (cte -> ID .)
    WORDCTE         reduce using rule 26 (cte -> ID .)
    SENTENCECTE     reduce using rule 26 (cte -> ID .)
    RETURN          reduce using rule 26 (cte -> ID .)
    ENDSTMT         reduce using rule 26 (cte -> ID .)
    CLOSEBRAC       reduce using rule 26 (cte -> ID .)


state 41

    (17) decaux -> type ID OPENBRAC cte . CLOSEBRAC func_declare_array declareaux

    CLOSEBRAC       shift and go to state 75


state 42

    (30) cte -> SENTENCECTE .

    MULT            reduce using rule 30 (cte -> SENTENCECTE .)
    DIV             reduce using rule 30 (cte -> SENTENCECTE .)
    PLUS            reduce using rule 30 (cte -> SENTENCECTE .)
    MINUS           reduce using rule 30 (cte -> SENTENCECTE .)
    COMA            reduce using rule 30 (cte -> SENTENCECTE .)
    CLOSECURL       reduce using rule 30 (cte -> SENTENCECTE .)
    RELOP           reduce using rule 30 (cte -> SENTENCECTE .)
    AND             reduce using rule 30 (cte -> SENTENCECTE .)
    OR              reduce using rule 30 (cte -> SENTENCECTE .)
    READ            reduce using rule 30 (cte -> SENTENCECTE .)
    WRITE           reduce using rule 30 (cte -> SENTENCECTE .)
    ID              reduce using rule 30 (cte -> SENTENCECTE .)
    IF              reduce using rule 30 (cte -> SENTENCECTE .)
    WHILE           reduce using rule 30 (cte -> SENTENCECTE .)
    DO              reduce using rule 30 (cte -> SENTENCECTE .)
    NOT             reduce using rule 30 (cte -> SENTENCECTE .)
    OPENPAREN       reduce using rule 30 (cte -> SENTENCECTE .)
    BOOLCTE         reduce using rule 30 (cte -> SENTENCECTE .)
    NUMBERCTE       reduce using rule 30 (cte -> SENTENCECTE .)
    WORDCTE         reduce using rule 30 (cte -> SENTENCECTE .)
    SENTENCECTE     reduce using rule 30 (cte -> SENTENCECTE .)
    RETURN          reduce using rule 30 (cte -> SENTENCECTE .)
    ENDSTMT         reduce using rule 30 (cte -> SENTENCECTE .)
    CLOSEPAREN      reduce using rule 30 (cte -> SENTENCECTE .)
    CLOSEBRAC       reduce using rule 30 (cte -> SENTENCECTE .)


state 43

    (29) cte -> WORDCTE .

    MULT            reduce using rule 29 (cte -> WORDCTE .)
    DIV             reduce using rule 29 (cte -> WORDCTE .)
    PLUS            reduce using rule 29 (cte -> WORDCTE .)
    MINUS           reduce using rule 29 (cte -> WORDCTE .)
    COMA            reduce using rule 29 (cte -> WORDCTE .)
    CLOSECURL       reduce using rule 29 (cte -> WORDCTE .)
    RELOP           reduce using rule 29 (cte -> WORDCTE .)
    AND             reduce using rule 29 (cte -> WORDCTE .)
    OR              reduce using rule 29 (cte -> WORDCTE .)
    READ            reduce using rule 29 (cte -> WORDCTE .)
    WRITE           reduce using rule 29 (cte -> WORDCTE .)
    ID              reduce using rule 29 (cte -> WORDCTE .)
    IF              reduce using rule 29 (cte -> WORDCTE .)
    WHILE           reduce using rule 29 (cte -> WORDCTE .)
    DO              reduce using rule 29 (cte -> WORDCTE .)
    NOT             reduce using rule 29 (cte -> WORDCTE .)
    OPENPAREN       reduce using rule 29 (cte -> WORDCTE .)
    BOOLCTE         reduce using rule 29 (cte -> WORDCTE .)
    NUMBERCTE       reduce using rule 29 (cte -> WORDCTE .)
    WORDCTE         reduce using rule 29 (cte -> WORDCTE .)
    SENTENCECTE     reduce using rule 29 (cte -> WORDCTE .)
    RETURN          reduce using rule 29 (cte -> WORDCTE .)
    ENDSTMT         reduce using rule 29 (cte -> WORDCTE .)
    CLOSEPAREN      reduce using rule 29 (cte -> WORDCTE .)
    CLOSEBRAC       reduce using rule 29 (cte -> WORDCTE .)


state 44

    (18) declareaux -> ENDSTMT .

    FUNC            reduce using rule 18 (declareaux -> ENDSTMT .)
    BEGIN           reduce using rule 18 (declareaux -> ENDSTMT .)
    READ            reduce using rule 18 (declareaux -> ENDSTMT .)
    WRITE           reduce using rule 18 (declareaux -> ENDSTMT .)
    ID              reduce using rule 18 (declareaux -> ENDSTMT .)
    IF              reduce using rule 18 (declareaux -> ENDSTMT .)
    WHILE           reduce using rule 18 (declareaux -> ENDSTMT .)
    DO              reduce using rule 18 (declareaux -> ENDSTMT .)
    NOT             reduce using rule 18 (declareaux -> ENDSTMT .)
    OPENPAREN       reduce using rule 18 (declareaux -> ENDSTMT .)
    BOOLCTE         reduce using rule 18 (declareaux -> ENDSTMT .)
    NUMBERCTE       reduce using rule 18 (declareaux -> ENDSTMT .)
    WORDCTE         reduce using rule 18 (declareaux -> ENDSTMT .)
    SENTENCECTE     reduce using rule 18 (declareaux -> ENDSTMT .)
    RETURN          reduce using rule 18 (declareaux -> ENDSTMT .)
    ENDSTMT         reduce using rule 18 (declareaux -> ENDSTMT .)


state 45

    (19) declareaux -> COMA . decaux
    (16) decaux -> . type ID func_declare_var declareaux
    (17) decaux -> . type ID OPENBRAC cte CLOSEBRAC func_declare_array declareaux
    (31) type -> . BOOL func_type
    (32) type -> . NUMBER func_type
    (33) type -> . WORD func_type
    (34) type -> . SENTENCE func_type

    BOOL            shift and go to state 14
    NUMBER          shift and go to state 13
    WORD            shift and go to state 16
    SENTENCE        shift and go to state 12

    decaux                         shift and go to state 76
    type                           shift and go to state 17

state 46

    (16) decaux -> type ID func_declare_var declareaux .

    FUNC            reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    BEGIN           reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    READ            reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    WRITE           reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    ID              reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    IF              reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    WHILE           reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    DO              reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    NOT             reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    OPENPAREN       reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    BOOLCTE         reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    NUMBERCTE       reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    WORDCTE         reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    SENTENCECTE     reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    RETURN          reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    ENDSTMT         reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)


state 47

    (57) cycle -> DO . block WHILE OPENPAREN expression CLOSEPAREN ENDSTMT
    (5) block -> . OPENCURL blockaux CLOSECURL

    OPENCURL        shift and go to state 34

    block                          shift and go to state 77

state 48

    (11) input -> READ . OPENPAREN ID func_read CLOSEPAREN ENDSTMT

    OPENPAREN       shift and go to state 78


state 49
